--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.6",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
