--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.8",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
