--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
     "react-router-dom": "^6.21.3",
     "react-spinners": "^0.13.8",
