--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.21.3",
     "react-spinners": "^0.13.8",
     "tailwindcss": "^3.4.1",
